[package]
name = "lotus-lib"
version = "3.0.0"
edition = "2021"
authors = ["Youn Mélois <youn@melois.dev>"]
repository = "https://github.com/sehnryr/lotus-lib"
homepage = "https://github.com/sehnryr/lotus-lib"
description = "A library for reading data from Warframe's files stored in the Cache.Windows folder"
readme = "README.md"
license = "MIT"
keywords = ["warframe", "cache", "decompression"]
categories = ["encoding", "filesystem", "parsing"]
exclude = ["src/main.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
derivative = "2.2.0"
log = "0.4.17"
lz4_flex = "0.9.5"
oodle-sys = "0.1"
rctree = "0.6.0"
zerocopy = { version = "0.7.32", features = ["derive"] }
