[workspace]
members = ["lotus-utils-audio", "lotus-utils-texture"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[package]
name = "lotus-lib"
version = "4.0.0"
edition = "2021"
authors = ["Youn Mélois <youn@melois.dev>"]
repository = "https://github.com/sehnryr/lotus-lib"
homepage = "https://github.com/sehnryr/lotus-lib"
description = "A library for reading data from Warframe's files stored in the Cache.Windows folder"
readme = "README.md"
license = "MIT"
keywords = ["warframe", "cache", "decompression"]
categories = ["encoding", "filesystem", "parsing"]
exclude = [".*"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[features]
post_ensmallening = []
pre_ensmallening = []
internal = ["post_ensmallening", "pre_ensmallening"]

[dependencies]
anyhow = "1.0.69"
derivative = "2.2.0"
log = "0.4.17"
lz4_flex = "0.9.5"
oodle-safe = "0.1"
zerocopy = { version = "0.7.32", features = ["derive"] }
