[package]
name = "lotus-utils-texture"
version = "0.1.0"
edition = "2021"
authors = ["Youn Mélois <youn@melois.dev>"]
repository = "https://github.com/sehnryr/lotus-lib"
homepage = "https://github.com/sehnryr/lotus-lib"
description = "Utilities for lotus-lib texture handling."
license = "MIT"
keywords = ["warframe", "cache", "decompression", "utils", "texture"]
categories = ["encoding", "filesystem", "parsing"]
exclude = [".*"]

[dependencies]
anyhow = "1.0.79"
bytebuffer = "2.2.0"
ddsfile = "0.5.2"
derivative = "2.2.0"
log = "0.4.20"
lotus-lib = { path = "../", version = "3.0.1", features = ["internal"] }
zerocopy = { version = "0.7.32", features = ["derive"] }
